# routes/index.js
@@ -4,6 +4,7 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 router.use('/movies', require('./movies'));
 router.use('/users', require('./users'));
+router.use('/series', require('./series'));
 /*
 routes.get('/', (req,res) => {
     res.send('David Peña');
